refactor: Response와 Exception 객체 포맷 수정 - #198 을 참고하여 response 포맷을 변경 - ResponseEntity를 사용하여 반환하도록 수정 #198